--- a/index.html
+++ b/index.html
@@ -121,6 +121,15 @@
 			<a id="help-popup-cancel" href="#" class="ui-btn" data-rel="back">OK</a>
 		</div>
 	</div>
+	<div id="demo-popup" class="ui-popup">
+		<div class="ui-popup-content">
+			You using demo app, so you can open only 3 files<br>
+			You can buy full version in store
+		</div>
+		<div class="ui-popup-footer ui-bottom-button">
+			<a id="help-popup-cancel" href="#" class="ui-btn" data-rel="back">OK</a>
+		</div>
+	</div>
 	<div id="sa-toast" class="ui-popup ui-popup-toast">
 		<div class="ui-popup-content">
 			<!--SA Service Connection Errors-->
