Fix for new tizen

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="sa-note" id="msg-oncomplete">File transfer ended successful.</div>
         </div>
     </div>
-    <script type="text/javascript" src="a.js"></script>
+    <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="lib/tau/wearable/js/tau.min.js"></script>
     <script type="text/javascript" src="lib/pdfjs/pdf.js"></script>
     <script type="text/javascript">
