--- a/assets/index.html
+++ b/assets/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <meta name="description" content="Tizen Wearable PDF viewer by vlack" />
-  <title>PDFview</title>
+  <meta name="description" content="Tizen Wearable Docs viewer by vlack" />
+  <title>Docs View</title>
   <link rel="stylesheet" href="bundle.css">
   <style>
       body {
