Add deprication message

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
     </div>
     <div id="help-popup" class="ui-popup">
         <div class="ui-popup-content">
+            There is a problem with uploading files on last tizen versions. For more info check the site (⬇ down button)<br>
             <button class="ui-btn" onclick="openBrowserOnPhone('https://v1ack.github.io/pdfview')" style="border: 3px green solid; border-radius: 50px; padding: 2px; margin-bottom: 10px;">Download app</button> This app can open PDFs<br> You can manually
             put PDF to 'Documents' folder, or send by special app
         </div>
