--- a/assets/index.html
+++ b/assets/index.html
@@ -1,26 +1,52 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <meta name="description" content="Tizen Wearable Docs viewer by vlack" />
-  <title>Docs View</title>
-  <link rel="stylesheet" href="bundle.css">
-  <style>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
+    <meta name="description" content="Tizen Wearable Docs viewer by vlack" />
+    <title>Docs View</title>
+    <link rel="stylesheet" href="bundle.css" />
+    <style>
       body {
-          margin: 0;
-          color: white;
-          background-color: black;
+        margin: 0;
+        color: white;
+        background-color: black;
       }
 
       ::-webkit-scrollbar {
-          display: none;
+        display: none;
       }
-  </style>
-  <script defer src="bundle.js"></script>
-</head>
+      #loading-node > img {
+        height: 160px;
+        left: 100px;
+        position: relative;
+        top: 100px;
+      }
 
-<body></body>
+      #loading-node > p {
+        font-size: 36px;
+        position: relative;
+        text-align: center;
+        top: 70px;
+      }
+    </style>
+  </head>
 
+  <body>
+    <div id="loading-node">
+      <img src="icon.png" alt="" />
+      <p>Loading...</p>
+    </div>
+  </body>
+  <script type="text/javascript">
+    window.onload = function () {
+      var script = document.createElement("script")
+      script.src = "bundle.js"
+      script.defer = true
+      document.head.appendChild(script)
+    }
+  </script>
 </html>
